--- a/module-3/sml-3-code-along.qmd
+++ b/module-3/sml-3-code-along.qmd
@@ -201,17 +201,18 @@ y_actual = test_df['early_gen'].astype(int)
 ```{python}
 #| eval: false
 #| echo: true
-from sklearn.metrics import accuracy_score, recall_score, precision_score, confusion_matrix, cohen_kappa_score
+from sklearn.metrics import accuracy_score, recall_score, confusion_matrix, cohen_kappa_score
 
 # Metrics we'se seen: 
 accuracy = accuracy_score(y_actual, y_preds)
 
 # New metrics
-sensitivity = recall_score(y_actual, y_preds, pos_label=1)
 precision = precision_score(y_actual, y_preds, pos_label=1)
 kappa = cohen_kappa_score(y_actual, y_preds)
 
+# Calculate a confusion matrix to get counts of true/false positive/negative predictions
 true_negative, false_positive, false_negative, true_positive = confusion_matrix(y_actual, y_preds).ravel()
+sensitivity = true_positive / (true_positive + false_negative)  # or the sklearn.metrics recall_score function
 specificity = true_negative / (true_negative + false_positive)
 negative_predictive_value = true_negative / (true_negative + false_negative)
 ```
